fixed the image issue. images are now aligned vertically in a card.

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,7 @@ body {
 
 .imgContainer {
   height: 435px;
+  line-height: 435px;
   width: 290px;
-  vertical-align: middle;
-}
-
-.innerImgContainer {
-  height: 100%;
   vertical-align: middle;
 }
